llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_1_const_field_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

declare void @print(i64)

define i64 @f() {
entry:
  %"s#local#sym21#" = alloca %"Struct#id0", align 8
  store %"Struct#id0" { i64 1 }, ptr %"s#local#sym21#", align 4
  ret i64 1
}
