llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_1_field_var_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64 }

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64, i64, ptr)

declare void @gc_run()

declare void @gc_mark(ptr)

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare ptr @tmc_stdlib_string_new(ptr, i64)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1n(i64 %"n#param#sym21#") gc "shadow-stack" {
entry:
  %"s#local#sym22#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym22#", align 8
  call void @llvm.gcroot(ptr %"s#local#sym22#", ptr null)
  %"add#" = add i64 %"n#param#sym21#", 1
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64), i64 ptrtoint (ptr getelementptr ({ i1, %"Struct#id0" }, ptr null, i64 0, i32 1) to i64), ptr null)
  %"heap#struct#Struct#id0#.field#idx0#sym20" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  store i64 %"add#", ptr %"heap#struct#Struct#id0#.field#idx0#sym20", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym22#", align 8
  call void @gc_run()
  ret i64 1
}

attributes #0 = { nounwind }
