llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_2_fields_mixed2_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64, i64 }

declare void @print(i64)

declare ptr @malloc(i64)

define i64 @f(i64 %"n#param#sym22#") {
entry:
  %"s#local#sym23#" = alloca ptr, align 8
  %"heap#struct#Struct#id0#" = call ptr @malloc(i64 ptrtoint (ptr getelementptr (%"Struct#id0", ptr null, i32 1) to i64))
  %"add#" = add i64 %"n#param#sym22#", 1
  %"heap#struct#Struct#id0#.field1#idx0#sym20" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 0
  store i64 0, ptr %"heap#struct#Struct#id0#.field1#idx0#sym20", align 4
  %"heap#struct#Struct#id0#.field2#idx1#sym21" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i32 0, i32 1
  store i64 %"add#", ptr %"heap#struct#Struct#id0#.field2#idx1#sym21", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym23#", align 8
  ret i64 1
}
