llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_2_fields_var_optimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%"Struct#id0" = type { i64, i64 }

@layout_s6Struct = global [2 x i64] zeroinitializer

; Function Attrs: nounwind
declare void @llvm.gcroot(ptr, ptr) #0

declare ptr @gc_malloc(i64)

declare void @gc_run()

declare void @tmc_check_array_index(i64, i64, i64, i64)

declare void @_TM0_5print1n(i64)

declare void @_TM0_5print1b(i1)

define private void @_glob() {
entry:
  unreachable
}

define i64 @_TM0_1f1n(i64 %"n#param#sym23#") gc "shadow-stack" {
entry:
  %"s#local#sym24#" = alloca ptr, align 8
  store ptr null, ptr %"s#local#sym24#", align 8
  call void @llvm.gcroot(ptr nonnull %"s#local#sym24#", ptr nonnull @layout_s6Struct)
  %"add#" = add i64 %"n#param#sym23#", 1
  %"add#1" = add i64 %"n#param#sym23#", 2
  %"heap#struct#Struct#id0#" = call ptr @gc_malloc(i64 16)
  store i64 %"add#", ptr %"heap#struct#Struct#id0#", align 4
  %"heap#struct#Struct#id0#.field2#idx1#sym22" = getelementptr inbounds %"Struct#id0", ptr %"heap#struct#Struct#id0#", i64 0, i32 1
  store i64 %"add#1", ptr %"heap#struct#Struct#id0#.field2#idx1#sym22", align 4
  store ptr %"heap#struct#Struct#id0#", ptr %"s#local#sym24#", align 8
  call void @gc_run()
  ret i64 1
}

attributes #0 = { nounwind }
