llvm/src/snapshots/transmute_llvm__tests__struct_instantiate_2_fields_var_unoptimized.snap
---
source: llvm/src/lib.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

%"Struct#id0" = type { i64, i64 }

declare void @print(i64)

define i64 @f(i64 %"n#param#sym22#") {
entry:
  %"s#local#sym23#" = alloca %"Struct#id0", align 8
  %"add#" = add i64 %"n#param#sym22#", 1
  %"add#1" = add i64 %"n#param#sym22#", 2
  %insert = insertvalue %"Struct#id0" undef, i64 %"add#", 0
  %insert2 = insertvalue %"Struct#id0" %insert, i64 %"add#1", 1
  store %"Struct#id0" %insert2, ptr %"s#local#sym23#", align 4
  ret i64 1
}
